--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 body{
 margin:0;
 font-family:'Poppins',Arial;
-background:linear-gradient(135deg,#dfe9ff,#ffe7ff,#e7fff4);
+background:#000;
 min-height:100vh;
 padding:12px;
 }
@@ -26,6 +26,7 @@ padding:16px;
 box-shadow:0 25px 60px rgba(0,0,0,.18);
 }
 
+/* USER PHOTO */
 #dp{
 width:180px;height:180px;border-radius:50%;
 border:6px solid white;object-fit:cover;
@@ -33,8 +34,9 @@ display:block;margin:10px auto;
 box-shadow:0 0 30px rgba(255,0,100,.5);
 }
 
+/* SHAYARI CARD */
 .shayariBox{
-background:white;
+background:rgba(255,255,255,0.85);
 padding:16px;
 border-radius:22px;
 box-shadow:0 20px 50px rgba(0,0,0,.15);
@@ -47,6 +49,7 @@ text-align:center;
 color:#000;
 }
 
+/* NEW YEAR TEXT */
 .gold{
 text-align:center;
 font-size:26px;
@@ -56,6 +59,7 @@ color:transparent;
 -webkit-background-clip:text;
 }
 
+/* BUTTON */
 .btn{
 width:100%;padding:14px;
 border-radius:14px;border:none;
@@ -87,7 +91,7 @@ font-weight:900;display:none;
 
 <body>
 
-<!-- 🔥 FULLSCREEN AD -->
+<!-- AD OVERLAY -->
 <div id="adOverlay">
   <button id="skipBtn" onclick="closeAd()">⏭ Skip Ad</button>
   <iframe id="adFrame"></iframe>
@@ -119,25 +123,27 @@ font-weight:900;display:none;
 
 <script>
 
-/* 🔥 आपका Smartlink यहाँ डालें */
-const SMARTLINK = "https://www.effectivegatecpm.com/bn12v8x3hx?key=fd0a9f972b9219bd4ab142f2e4011868";
+/* BACKGROUND IMAGE */
+const BG_IMAGE_URL =
+"https://images.unsplash.com/photo-1519677100203-a0e668c92439";
 
+/* YOUR SITE LINK */
+const SITE_LINK = "https://your-site-link";
 
-/* ------------------ AD SYSTEM ------------------ */
+/* YOUR SMARTLINK */
+const SMARTLINK =
+"https://www.effectivegatecpm.com/bn12v8x3hx?key=fd0a9f972b9219bd4ab142f2e4011868";
 
+/* -------- AD SYSTEM -------- */
 let afterAdAction=null;
 
-function adThenShare(){
- afterAdAction = shareImg;
- showAd();
-}
+function adThenShare(){afterAdAction=shareImg;showAd();}
 
 function showAd(){
  adOverlay.style.display="block";
- adFrame.src = SMARTLINK;
+ adFrame.src=SMARTLINK;
  skipBtn.style.display="none";
-
- setTimeout(()=> skipBtn.style.display="block",5000);
+ setTimeout(()=>skipBtn.style.display="block",5000);
 }
 
 function closeAd(){
@@ -146,48 +152,44 @@ function closeAd(){
  if(afterAdAction){afterAdAction();afterAdAction=null;}
 }
 
-
-/* ------------------ SHAYARI LIST ------------------ */
-
+/* -------- SHAYARI LIST -------- */
 const list=[
 "नए साल में मेरे अपने सब खुश रहें, स्वस्थ रहें और मुस्कुराते रहें 🎉🙏",
-"नया साल आपकी ज़िंदगी में ढेर सारी खुशियाँ लाए ✨🎉",
-"नई शुरुआत का साल 2026 मुबारक हो 🎉",
-"भगवान आपकी हर मनोकामना पूरी करें 🙏✨",
-"हर दिन मुस्कुराते रहो 😊🎉",
-"Success का साल 2026 🚀🔥",
-"आपके घर सुख-शांति रहे 🙏💐"
+"नया साल आपकी जिंदगी में खुशियों की बरसात लाए ✨💖",
+"नई सुबह नई किरण के साथ नया साल मुबारक 🌅🎉",
+"हर ख्वाब पूरा हो इसी दुआ के साथ नया साल मुबारक ✨🙏",
+"2026 आपके लिए सफलता का साल हो 🚀🔥",
+"चेहरे पर मुस्कान रहे – दिल में प्यार रहे 💖😊",
+"नया साल – नई शुरुआत – नया सफर शुभ हो 🎉✨"
 ];
 
 let i=0;
 function next(){i=(i+1)%list.length;shayari.innerText=list[i];}
 function prev(){i=(i-1+list.length)%list.length;shayari.innerText=list[i];}
 
-
 /* IMAGE PREVIEW */
-file.onchange=e=>{
- dp.src = URL.createObjectURL(e.target.files[0]);
-};
+file.onchange=e=>{dp.src=URL.createObjectURL(e.target.files[0]);};
 
-
-/* --------------- SHARE IMAGE + TEXT + LINK --------------- */
-
+/* -------- SHARE IMAGE -------- */
 async function shareImg(){
 
-const c=document.getElementById("canvas");
+const c=canvas;
 const ctx=c.getContext("2d");
 
 c.width=1080;
 c.height=1080;
 
-/* background */
-let g=ctx.createLinearGradient(0,0,1080,1080);
-g.addColorStop(0,"#ff9a9e");
-g.addColorStop(1,"#8fd3f4");
-ctx.fillStyle=g;
+/* BACKGROUND IMAGE */
+let bg=new Image();
+bg.src=BG_IMAGE_URL;
+await bg.decode();
+ctx.drawImage(bg,0,0,1080,1080);
+
+/* dark overlay for premium look */
+ctx.fillStyle="rgba(0,0,0,0.35)";
 ctx.fillRect(0,0,1080,1080);
 
-/* round photo */
+/* user round photo */
 if(dp.src){
  let img=new Image();
  img.src=dp.src;
@@ -195,37 +197,43 @@ if(dp.src){
 
  ctx.save();
  ctx.beginPath();
- ctx.arc(540,250,180,0,Math.PI*2);
+ ctx.arc(540,230,170,0,Math.PI*2);
  ctx.clip();
- ctx.drawImage(img,340,50,400,400);
+ ctx.drawImage(img,340,60,400,340);
  ctx.restore();
 }
 
-/* shayari */
-ctx.fillStyle="#000";
+/* SHAYARI TEXT */
+ctx.fillStyle="#fff";
 ctx.font="bold 40px Poppins";
 ctx.textAlign="center";
 wrapText(ctx,list[i],540,560,760,50);
 
-/* happy new year */
+/* HAPPY NEW YEAR */
 ctx.font="bold 60px Poppins";
-ctx.fillStyle="#ff7b00";
-ctx.fillText("✨ HAPPY NEW YEAR 2026 ✨",540,1000);
+ctx.fillStyle="#ffd54f";
+ctx.fillText("✨ HAPPY NEW YEAR 2026 ✨",540,950);
 
-c.toBlob(async(b)=>{
- let f=new File([b],"newyear.png",{type:"image/png"});
+/* QR bottom-right small */
+let qr=new Image();
+qr.src="https://api.qrserver.com/v1/create-qr-code/?size=110x110&data="
++encodeURIComponent(SITE_LINK);
+await qr.decode();
+ctx.drawImage(qr,1080-120,1080-120,110,110);
 
+/* SHARE */
+c.toBlob(async b=>{
+ const f=new File([b],"newyear2026.png",{type:"image/png"});
  await navigator.share({
   files:[f],
   title:"Happy New Year 2026",
-  text:"🎉 Happy New Year 2026\n👉 यहाँ अपनी फोटो से बनाओ:\nhttps://your-site-link"
+  text:"🎉 ऐसा ही VIP कार्ड बनाओ यहाँ ➜ "+SITE_LINK
  });
-
 });
 
 }
 
-/* wrap text function */
+/* WRAP TEXT */
 function wrapText(ctx,text,x,y,maxWidth,lineHeight){
 let words=text.split(" ");
 let line="";
